fixed #161 overwrote materialize .card position attribute to fix z-index issues. updated course tabs css

--- a/src/app/home-page/categories/categories.component.css
+++ b/src/app/home-page/categories/categories.component.css
@@ -2,6 +2,7 @@
     margin: auto;
     padding: 25px 50px;
     max-height: calc(100vh - var(--header-height));
+    margin-top: var(--header-height);
 }
 
 .categories.frosted {
@@ -27,7 +28,6 @@
     text-align: center;
     margin: 20px;
     transition: all .1s ease-in-out;
-    position: relative;
     cursor: pointer;
     animation: .5s fadeIn;
 }
